--- a/index.html
+++ b/index.html
@@ -270,12 +270,10 @@
     </div>
 
 
-    <footer>
-
+    <footer class="container">
       <div class="footer__container">
       <p class="footer__description">Copyright © Amit Singh 2023 </p>
       </div>
-      
     </footer>
 
     <script src="./scripts/mobile-nav.js"></script>
