--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="headingContainer">
         <div class="line left"></div>
         <div class="dots"></div>
-        <h2 class="about__title title__type">Education</h2>
+        <h2 class="education__title title__type">Education</h2>
       </div>
       <div class="college">
           <div class="college__details">
@@ -279,6 +279,7 @@
 
     <script src="./scripts/mobile-nav.js"></script>
     <script src="./scripts/theme-toggle.js"></script>
+    <script src="./scripts/scroll.js"></script>
     
   </body>
 </html>
