adding the work section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./stylesheets/toggle.css">
     <link rel="stylesheet" href="./stylesheets/footer.css">
     <link rel="stylesheet" href="./stylesheets/education.css">
+    <link rel="stylesheet" href="./stylesheets/work.css">
     
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -57,7 +58,7 @@
           </div>
           <ul class="header__menu">
             <li><a class="header__link" href="#about">About</a></li>
-            <li><a class="header__link" href="#featured">Work</a></li>
+            <li><a class="header__link" href="#work">Work</a></li>
             <li><a class="header__link" href="#contact">Contact</a></li>
             <li class="header__line"></li>
             <li>
@@ -145,7 +146,7 @@
         </div>
         <ul class="mobile-nav__menu">
           <li><a class="mobile-nav__link" href="#about">About</a></li>
-          <li><a class="mobile-nav__link" href="#featured">Work</a></li>
+          <li><a class="mobile-nav__link" href="#work">Work</a></li>
           <li><a class="mobile-nav__link" href="#contact">Contact</a></li>
           <li class="header__line"></li>
           <li>
@@ -249,6 +250,56 @@
             <li class="skill__list">Java</li>
             <li class="skill__list">Python</li>
           </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="work">
+      <div class="headingContainer">
+        <div class="line left"></div>
+        <div class="dots"></div>
+        <h2 class="skill__title title__type">Projects</h2>
+      </div>
+      <div class="box">
+        <div class="project">
+          <div class="image__container">
+            <img class="project__img" src="./images/calculator.png" alt="" />
+          </div>
+          <div class="project__info">
+            <h3 class="project__title">Calculator</h3>
+            <p class="project__description">
+              Simple calculator using tools <span class="tools__text">HTML</span>, <span class="tools__text">CSS</span>, <span class="tools__text">Javascript</span> by using the algorithms <span class="tools__text">Infix Expression Evaluator</span> and <span>Balanced paranthesis checker</span>.
+            </p>
+            <a class="btn project__btn" href="#">Github</a>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="image__container">
+            <img class="project__img" src="./images/sudoku.png" alt="" />
+          </div>
+
+          <div class="project__info">
+            <h3 class="project__title">Sudoku Solver</h3>
+            <p class="project__description">
+              9*9 Sudoku solver made using <span class="tools__text">HTML</span>, <span class="tools__text">CSS</span>, <span class="tools__text">Javascript</span> and <span class="tools__text">Backtracking</span> approach.
+            </p>
+            <a class="btn project__btn" href="#">Github</a>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="image__container">
+            <img class="project__img" src="./images/portfolio.png" alt="" />
+          </div>
+
+          <div class="project__info">
+            <h3 class="project__title">Portfolio</h3>
+            <p class="project__description">
+              A beautiful portfolio using <span class="tools__text">HTML</span>, <span class="tools__text">CSS</span> and <span class="tools__text">Javascript</span>. 
+            </p>
+            <a class="btn project__btn" href="#">Github</a>
+          </div>
         </div>
       </div>
     </div>
