--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div class="headingContainer">
         <div class="line left"></div>
         <div class="dots"></div>
-        <h2 class="skill__title title__type">Projects</h2>
+        <h2 class="work__title title__type">Projects</h2>
       </div>
       <div class="box">
         <div class="project">
