--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <div class="project__info">
             <h3 class="project__title">Calculator</h3>
             <p class="project__description">
-              Simple calculator using tools <span class="tools__text">HTML</span>, <span class="tools__text">CSS</span>, <span class="tools__text">Javascript</span> by using the algorithms <span class="tools__text">Infix Expression Evaluator</span> and <span>Balanced paranthesis checker</span>.
+              Simple calculator using tools <span class="tools__text">HTML</span>, <span class="tools__text">CSS</span>, <span class="tools__text">Javascript</span> by using the algorithms <span class="tools__text">Infix Expression Evaluator</span> and <span class="tools__text">Balanced paranthesis checker</span>.
             </p>
             <a class="btn project__btn" href="#">Github</a>
           </div>
