--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>😁Portfolio</title>
+    <title>Amit</title>
+    <link rel="icon" type="image/x-icon" href="/images/a-favicon.svg">
     <link rel="stylesheet" href="./modern-normalize.css" />
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <link rel="stylesheet" href="./stylesheets/header.css" />
