--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <div class="about__description">
           <p>
-            I am a experienced software devloper and tech enthusiastic lerning
+            I am a software devloper and tech enthusiastic lerning
             the things by building the projects, little failing and learning on
             the way. I keep my self up to date with the technologies and adapt
             the things relatively fast. I am skilled in building the web
