updating the themes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="./stylesheets/about.css" />
     <link rel="stylesheet" href="./stylesheets/skills.css" />
     <link rel="stylesheet" href="./stylesheets/contact.css" />
-    <link rel="stylesheet" href="./stylesheets/dark.css"  id="dark__theme" disabled/>
-    <link rel="stylesheet" href="./stylesheets/light.css" id="light__theme"/>
+    <link rel="stylesheet" href="./stylesheets/dark.css"  id="dark__theme" />
+    <link rel="stylesheet" href="./stylesheets/light.css" id="light__theme" disabled/>
     <link rel="stylesheet" href="./stylesheets/subtitle.css" />
     <link rel="stylesheet" href="./stylesheets/title.css" />
     <link rel="stylesheet" href="./stylesheets/toggle.css">
