adding social links

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="reach-img__container">
           <img class="profile__img" src="./profile-photo/Amit.png" alt="" />
           <div class="reach-btn__container">
-            <button class="reach__button btn"><a href="https://www.linkedin.com/in/amitskingh/">Reach Me</a></button>
+            <button class="reach__button btn"><a class="social__links" href="https://www.linkedin.com/in/amitskingh/">Reach Me</a></button>
           </div>
         </div>
 
