--- a/index.html
+++ b/index.html
@@ -313,6 +313,20 @@
             <a class="btn project__btn" href="https://amitskingh-calculator.netlify.app/">Live</a>
           </div>
         </div>
+        
+        <div class="project">
+          <div class="image__container">
+            <img class="project__img" src="./images/todoapp.png" alt="" />
+          </div>
+          <div class="project__info">
+            <h3 class="project__title">Todo App</h3>
+            <p class="project__description">
+              A user freidly todo-app for daily tasks made using <span class="tools__text">React</span>.
+            </p>
+            <a class="btn project__btn" href="https://github.com/amitskingh/todo-app">Github</a>
+            <a class="btn project__btn" href="https://amitskingh-todoapp.netlify.app/">Live</a>
+          </div>
+        </div>
       </div>
     </div>
 
