--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
               Textmate is a user-friendly text editor that allows users to organize notes under various subject sections. Tech stack used <span class="tools__text">React</span>, <span class="tools__text">Nodejs</span>, <span class="tools__text">MongoDB</span> and <span class="tools__text">Mongoose</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/text-mate">Github</a>
+            <a class="btn project__btn" href="https://github.com/amitskingh/text-mate">Live</a>
           </div>
         </div>
         
@@ -324,7 +325,7 @@
               A user freidly todo-app for daily tasks made using <span class="tools__text">React</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/todo-app">Github</a>
-            <a class="btn project__btn" href="https://amitskingh-todoapp.netlify.app/">Live</a>
+            <a class="btn project__btn" href="https://amitskingh-textmate.netlify.app">Live</a>
           </div>
         </div>
       </div>
@@ -341,7 +342,7 @@
         <button class="contact__button btn">Say Hello</button>
       </div>
       <div class="contact__icon">
-        <a class="social__links contact__button">Email</a>
+        <a class="social__links contact__button" href="mailto:amitsskingh@gmail.com">Email</a>
         <a class="social__links contact__button" href="https://www.linkedin.com/in/amitskingh/">LinkedIn</a>
         <a class="social__links contact__button" href="https://github.com/amitskingh">Github</a>
       </div>
