--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               Textmate is a user-friendly text editor that allows users to organize notes under various subject sections. Tech stack used <span class="tools__text">React</span>, <span class="tools__text">Nodejs</span>, <span class="tools__text">MongoDB</span> and <span class="tools__text">Mongoose</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/text-mate">Github</a>
-            <a class="btn project__btn" href="https://github.com/amitskingh/text-mate">Live</a>
+            <a class="btn project__btn" href="https://amitskingh-textmate.netlify.app">Live</a>
           </div>
         </div>
         
@@ -325,7 +325,7 @@
               A user freidly todo-app for daily tasks made using <span class="tools__text">React</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/todo-app">Github</a>
-            <a class="btn project__btn" href="https://amitskingh-textmate.netlify.app">Live</a>
+            <a class="btn project__btn" href="https://amitskingh-todoapp.netlify.app/">Live</a>
           </div>
         </div>
       </div>
