--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
               </div>
             </li>
             <li>
-              <a class="header__resume btn" href="https://1drv.ms/b/c/8d3c1605f4c52c2e/EQaysnWQYAhAqH7xBoCBitEBLAWymul7e4D9lyBcmr6ROQ">Resume</a>
+              <!-- <a class="header__resume btn" href="https://1drv.ms/b/c/8d3c1605f4c52c2e/EQaysnWQYAhAqH7xBoCBitEBLAWymul7e4D9lyBcmr6ROQ">Resume</a> -->
+              <a class="header__resume btn" href="#">Resume</a>
             </li>
           </ul>
         </nav>
@@ -342,7 +343,8 @@
         <button class="contact__button btn">Say Hello</button>
       </div>
       <div class="contact__icon">
-        <a class="social__links contact__button" href="mailto:amitsskingh@gmail.com">Email</a>
+        <!-- <a class="social__links contact__button" href="mailto:amitsskingh@gmail.com">Email</a> -->
+        <a class="social__links contact__button" href="">Email</a>
         <a class="social__links contact__button" href="https://www.linkedin.com/in/amitskingh/">LinkedIn</a>
         <a class="social__links contact__button" href="https://github.com/amitskingh">Github</a>
       </div>
