--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               </div>
             </li>
             <li>
-              <!-- <a class="header__resume btn" href="https://1drv.ms/b/c/8d3c1605f4c52c2e/EQaysnWQYAhAqH7xBoCBitEBLAWymul7e4D9lyBcmr6ROQ">Resume</a> -->
-              <a class="header__resume btn" href="#">Resume</a>
+              <a class="header__resume btn" href="https://1drv.ms/b/c/8d3c1605f4c52c2e/EZ320doROARHvEWBYa3LqJwBWZe5C87pQGxWiL78bpHtuQ?e=kAEGED">Resume</a>
+              <!-- <a class="header__resume btn" href="#">Resume</a> -->
             </li>
           </ul>
         </nav>
