--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       </div>
       <div class="contact__icon">
         <a class="social__links contact__button" href="mailto:amitsskingh@gmail.com">Email</a>
-        <a class="social__links contact__button" href="">Email</a>
+        <!-- <a class="social__links contact__button" href="">Email</a> -->
         <a class="social__links contact__button" href="https://www.linkedin.com/in/amitskingh/">LinkedIn</a>
         <a class="social__links contact__button" href="https://github.com/amitskingh">Github</a>
       </div>
