--- a/index.html
+++ b/index.html
@@ -272,6 +272,22 @@
             <a class="btn project__btn" href="https://textmate-frontend.netlify.app">Live</a>
           </div>
         </div>
+
+                
+        <div class="project">
+          <div class="image__container">
+            <img class="project__img" src="./images/rbac.png" alt="" />
+          </div>
+
+          <div class="project__info">
+            <h3 class="project__title">RBAC</h3>
+            <p class="project__description">
+              RBAC is the role based access control mechanism. Tech stack used <span class="tools__text">React</span> & <span class="tools__text">Tailwind</span>.
+            </p>
+            <a class="btn project__btn" href="https://github.com/amitskingh/rbac">Github</a>
+            <a class="btn project__btn" href="https://rbacapp.netlify.app">Live</a>
+          </div>
+        </div>
         
         <div class="project">
           <div class="image__container">
