--- a/index.html
+++ b/index.html
@@ -226,15 +226,17 @@
           <ul>
             <li class="skill__list">HTML</li>
             <li class="skill__list">CSS</li>
+            <li class="skill__list">Github</li>
             <li class="skill__list">Postman</li>
           </ul>
         </div>
         <div class="frameworks">
           <h2 class="skill__subtitle subtitle__type">Frameworks</h2>
           <ul>
-            <li class="skill__list">Node</li>
+            <li class="skill__list">Nodejs</li>
             <li class="skill__list">Express</li>
-            <li class="skill__list">React</li>
+            <li class="skill__list">Reactjs</li>
+            <li class="skill__list">Tailwind</li>
             <li class="skill__list">Bootstrap</li>
           </ul>
         </div>
@@ -282,7 +284,7 @@
           <div class="project__info">
             <h3 class="project__title">RBAC</h3>
             <p class="project__description">
-              RBAC is the role based access control app. Tech stack used <span class="tools__text">React</span> & <span class="tools__text">Tailwind</span>.
+              RBAC is the role based access control app. Tech stack used <span class="tools__text">Reactjs</span> & <span class="tools__text">Tailwind</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/rbac-app">Github</a>
             <a class="btn project__btn" href="https://rbac-app-amitskingh.netlify.app">Live</a>
@@ -342,7 +344,7 @@
           <div class="project__info">
             <h3 class="project__title">Todo App</h3>
             <p class="project__description">
-              A user freidly todo-app for daily tasks made using <span class="tools__text">React</span>.
+              A user freidly todo-app for daily tasks made using <span class="tools__text">Reactjs</span>.
             </p>
             <a class="btn project__btn" href="https://github.com/amitskingh/todo-app">Github</a>
             <a class="btn project__btn" href="https://todo-app-amitskingh.netlify.app/">Live</a>
